--- a/Lesson02/Bt2.html
+++ b/Lesson02/Bt2.html
@@ -8,9 +8,9 @@
 <body>
     <table width="100%" border="1" cellspacing = "0" >
         <tr>
-            <th >Tên miền</th>
-            <th >Phí cài đặt</th>
-            <th >Chi phí</th>
+            <th bgcolor="black" style="color: yellow;" >Tên miền</th>
+            <th bgcolor="black" style="color: yellow;" >Phí cài đặt</th>
+            <th bgcolor="black" style="color: yellow;" >Chi phí</th>
         </tr>
     
         <tr>
