--- a/Lesson02/Bt7.html
+++ b/Lesson02/Bt7.html
@@ -35,10 +35,10 @@
         border: 3px solid #f1f1f1;
         }
 
-       form h1{
+        h1{
         display: inline-block;
-        padding: 12px 20px;
-        margin: 8px 0;
+        padding: 12px 15px;
+        margin: auto;
        }
 
        input[type=text] {
@@ -64,15 +64,14 @@
         width: auto;
         padding: 10px 18px;
         background-color: rgb(188, 178, 178);
+        border: none;
         color: black;
       }
 
       .container {
         width: 100%;
-        padding-right: 15px;
-        padding-left: 15px;
-        margin-right: auto;
-        margin-left: auto;
+        padding: 15px;
+        margin: auto;
       }
       
       span.psw {
@@ -82,7 +81,7 @@
     </style>
 </head>
 <body>
-    <div>
+    <div class="container">
         <ul>
             <li>
                 <a href="">
@@ -91,7 +90,7 @@
             </li>
         </ul>
     </div>
-
+     
     <form action="" method="post">
         <h1>To Do List</h1>
         <div class="container">
