--- a/Lesson04/ex2-css.html
+++ b/Lesson04/ex2-css.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS EXTERNAL</title>
 </head>
 <body>
-    
+    /** Bộ chọn phần tử: body, h1, section,... 
+        Bộ chọn thuộc tính id
+        Bộ chọn thuộc tính class
+        Bộ chọn giá trị thuộc tính
+    */
 </body>
 </html>
