--- a/Lesson10/menu-1.html
+++ b/Lesson10/menu-1.html
@@ -6,15 +6,14 @@
     <title>MENU</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fonts.css">
-    <link rel="stylesheet" href="./css/fonts.css">
-    l
+    <link rel="stylesheet" href="./css/menu.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <div class="row">
+            <div class="row">   
                 <div class="logo">
-                    <img src="./images/logo.jpg" alt="">
+                    <a href=""><img src="./images/logo.jpg" alt=""></a>
                 </div>
                 <nav>
                     <div class="icon-nav">
