--- a/Exam01_NguyenTuanAnh/tin-tuc.html
+++ b/Exam01_NguyenTuanAnh/tin-tuc.html
@@ -3,9 +3,154 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TRÀ SEN BÁCH DIỆP - TIN TỨC</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/fonts.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="./css/news.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="logo">
+                    <a href="">
+                        <img src="./images/logo.jpg" alt="TRÀ SEN BÁCH DIỆP">
+                    </a>
+                </div>
+                <nav>
+                    <div class="icon-nav">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <ul>
+                        <li><a href="">Trang chủ</a></li>
+                        <li><a href="">Giới thiệu</a></li>
+                        <li><a href="">Sản phẩm</a></li>
+                        <li><a href="">Tin tức</a></li>
+                        <li><a href="">Liên hệ</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <section>
+        <div class="container">
+            <div class="title">
+                <h2>Tin tức</h2>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <img src="./images/TINTUC_01.jpg" alt="tintuc01">
+                    <h3>Văn hóa uống trà của người Việt, câu chuyện xưa và nay</h3>
+                    <p>Trà xanh thái nguyên được phổ biến là một thức uống dân dã, quen thuộc từ bao đời nay.
+                        Cây chè xuất hiện chủ yếu ở các tỉnh Thái Nguyên, Phú Thọ, Yên Bái, Lâm Đồng... là nguồn gốc 
+                        cho ra nhiều sản phẩm chè chất lượng cao.
+                    </p>
+                </div>
+                <div class="col">
+                    <img src="./images/TINTUC_02-05.jpg" alt="tintuc02">
+                    <h3>Chè xanh Thái Nguyên ướp hoa nhài</h3>
+                    <p>Ở Việt Nam có rất nhiều nơi trồng hoa nhài, đây là loại hoa nở tới 6 tháng/năm nên 
+                        hoa nhài tự nhiên được sử dụng để ướp trà rất nhiều, và trà ướp với hoa nhài giá thành rẻ hơn nhiều 
+                        so với trà ướp bông sen Tây Hồ.
+                    </p>
+                </div>
+                <div class="col">
+                    <img src="./images/TINTUC_03.jpg" alt="tintuc03">
+                    <h3>Cách bảo quản trà Shan Tuyết để giữ được vị hương thơm</h3>
+                    <p>Chè là loại thức uống dễ mất hương và vị nhất, cũng dễ hút những mùi hương khác lạ khiến
+                        chè dần mất đi mùi vị ban đầu. Bảo quản chè là việc hết sức quan trọng mà mỗi người uống chè đều phải biết.
+                    </p>
+                </div>
+                <div class="col">
+                    <img src="./images/TINTUC_04.jpg" alt="tintuc04">
+                    <h3>Văn hóa uống trà của người Việt, câu chuyện xưa và nay</h3>
+                    <p>Trà xanh thái nguyên được phổ biến là một thức uống dân dã, quen thuộc từ bao đời nay.
+                        Cây chè xuất hiện chủ yếu ở các tỉnh Thái Nguyên, Phú Thọ, Yên Bái, Lâm Đồng... là nguồn gốc 
+                        cho ra nhiều sản phẩm chè chất lượng cao.
+                    </p>
+                </div>
+                <div class="col">
+                    <img src="./images/TINTUC_05.jpg" alt="tintuc05">
+                    <h3>Chè xanh Thái Nguyên ướp hoa nhài</h3>
+                    <p>Ở Việt Nam có rất nhiều nơi trồng hoa nhài, đây là loại hoa nở tới 6 tháng/năm nên 
+                        hoa nhài tự nhiên được sử dụng để ướp trà rất nhiều, và trà ướp với hoa nhài giá thành rẻ hơn nhiều 
+                        so với trà ướp bông sen Tây Hồ.
+                    </p>
+                </div>
+                <div class="col">
+                    <img src="./images/TINTUC_06.jpg" alt="tintuc06">
+                    <h3>Cách bảo quản trà Shan Tuyết để giữ được vị hương thơm</h3>
+                    <p>Chè là loại thức uống dễ mất hương và vị nhất, cũng dễ hút những mùi hương khác lạ khiến
+                        chè dần mất đi mùi vị ban đầu. Bảo quản chè là việc hết sức quan trọng mà mỗi người uống chè đều phải biết.
+                    </p>
+                </div>
+                <div class="col">
+                    <img src="./images/TINTUC_07.jpg" alt="tintuc07">
+                    <h3>Văn hóa uống trà của người Việt, câu chuyện xưa và nay</h3>
+                    <p>Trà xanh thái nguyên được phổ biến là một thức uống dân dã, quen thuộc từ bao đời nay.
+                        Cây chè xuất hiện chủ yếu ở các tỉnh Thái Nguyên, Phú Thọ, Yên Bái, Lâm Đồng... là nguồn gốc 
+                        cho ra nhiều sản phẩm chè chất lượng cao.
+                    </p>
+                </div>
+                <div class="col">
+                    <img src="./images/TINTUC_08.jpg" alt="tintuc08">
+                    <h3>Chè xanh Thái Nguyên ướp hoa nhài</h3>
+                    <p>Ở Việt Nam có rất nhiều nơi trồng hoa nhài, đây là loại hoa nở tới 6 tháng/năm nên 
+                        hoa nhài tự nhiên được sử dụng để ướp trà rất nhiều, và trà ướp với hoa nhài giá thành rẻ hơn nhiều 
+                        so với trà ướp bông sen Tây Hồ.
+                    </p>
+                </div>
+                <div class="col">
+                    <img src="./images/TINTUC_09.jpg" alt="tintuc09">
+                    <h3>Cách bảo quản trà Shan Tuyết để giữ được vị hương thơm</h3>
+                    <p>Chè là loại thức uống dễ mất hương và vị nhất, cũng dễ hút những mùi hương khác lạ khiến
+                        chè dần mất đi mùi vị ban đầu. Bảo quản chè là việc hết sức quan trọng mà mỗi người uống chè đều phải biết.
+                    </p>
+                </div>
+            </div>
+            <div class="pagination">
+                <ul>
+                    <li><a href="">1</a></li>
+                    <li><a href="">2</a></li>
+                    <li><a href="">3</a></li>
+                    <li><a href="">4</a></li>
+                    <li><a href="">></a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer">
+            <div class="address">
+                <div class="logo"></div>
+                    <a href="">
+                        <img src="./images/logo2.png" alt="TRÀ SEN BÁCH DIỆP">
+                    </a>
+                </div>
+                <p>799.999.999</p>
+                <p>trasenbachdiep@gmail.com</p>
+                <p>Số 12, Quảng An, Hồ Tây, Hà Nội</p>
+            </div>
+            <div class="about-us">
+                <h3>VỀ CHÚNG TÔI</h3>
+                <p>Giới thiệu</p>
+                <p>Sản phẩm</p>
+                <p>Tin tức</p>
+            </div>
+            <div class="contact">
+                <h3>LIÊN HỆ</h3>
+                <ul>
+                    <li><i class="fa-brands fa-youtube"></i></li>
+                    <li><i class="fa-brands fa-instagram"></i></li>
+                    <li><i class="fa-brands fa-facebook"></i></li>
+                </ul>
+                <p>Copyright @ 2010-2020</p>
+                <p>Tra Sen Bach Diep. All right reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
