--- a/Lesson16/LabJquery.html
+++ b/Lesson16/LabJquery.html
@@ -73,11 +73,11 @@
                   </div>
                   <div class="mb-3">
                     <label for="age" class="form-label">Tuổi</label>
-                    <input type="number" class="form-control" id="age" placeholder="" value="0">
+                    <input type="number" class="form-control" id="age" placeholder="0">
                   </div>
                   <div class="mb-3">
                     <label for="gender" class="form-label">Giới tính</label>
-                    <input type="text" class="form-control" id="age" placeholder="Nam">
+                    <input type="text" class="form-control" id="sex" placeholder="Nam">
                   </div>
                   <div class="mb-3">
                     <label for="birthDate" class="form-label">Ngày sinh</label>
@@ -89,12 +89,7 @@
                   </div>
                   <div class="mb-3">
                     <label for="address" class="form-label">Địa chỉ</label>
-                    <select class="form-select" aria-label="Default select example">
-                        <option selected></option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                      </select>                  
+                    <input type="text" class="form-control" id="address" placeholder="">                 
                     </div>
                   <button type="submit" class="btn btn-primary">Save</button>
                 </form>
